--- a/.github/workflows/check-pr.yml
+++ b/.github/workflows/check-pr.yml
@@ -1,26 +1,26 @@
 name: Build & test project
 
 on:
-    pull_request:
-
-
+  pull_request:
+    branches:
+      - main
 jobs:
   test:
     runs-on: ubuntu-latest
-    permissions: 
+    permissions:
       contents: write
 
     steps:
       - uses: actions/checkout@v4
         with:
-            repository: ${{ github.event.pull_request.head.repo.full_name }}
-            ref: ${{ github.event.pull_request.head.ref }}
-        
+          repository: ${{ github.event.pull_request.head.repo.full_name }}
+          ref: ${{ github.event.pull_request.head.ref }}
+
       - name: Set up JDK 8
         uses: actions/setup-java@v3
         with:
-          java-version: '8'
-          distribution: 'zulu'
+          java-version: "8"
+          distribution: "zulu"
       - name: Run unit tests
         working-directory: .
         run: |
@@ -31,22 +31,15 @@ jobs:
         run: |
           # fail the build if mutation score is less than 80%
           mvn test-compile org.pitest:pitest-maven:mutationCoverage -DmutationThreshold=80
-  
-      - name: Generate JaCoCo Badge
-        id: jacoco
-        uses: cicirello/jacoco-badge-generator@v2
-        with:
-            generate-branches-badge: true
-            jacoco-csv-file: target/site/jacoco/jacoco.csv
-  
+
       - name: Log coverage percentage
         run: |
-            echo "coverage = ${{ steps.jacoco.outputs.coverage }}"
-            echo "branch coverage = ${{ steps.jacoco.outputs.branches }}"
-  
+          echo "coverage = ${{ steps.jacoco.outputs.coverage }}"
+          echo "branch coverage = ${{ steps.jacoco.outputs.branches }}"
+
       - name: Commit and push the badge (if it changed)
         uses: EndBug/add-and-commit@v9
         with:
-            default_author: github_actions
-            message: 'Update coverage badge'
-            add: '*.svg'
+          default_author: github_actions
+          message: "Update coverage badge"
+          add: "*.svg"
