--- a/.github/workflows/check-pr.yml
+++ b/.github/workflows/check-pr.yml
@@ -1,45 +1,22 @@
-name: Build & test project
+name: Java CI with Maven
 
 on:
+  push:
+    branches: ["main"]
   pull_request:
-    branches:
-      - main
+    branches: ["main"]
+
 jobs:
-  test:
+  build:
     runs-on: ubuntu-latest
-    permissions:
-      contents: write
 
     steps:
-      - uses: actions/checkout@v4
-        with:
-          repository: ${{ github.event.pull_request.head.repo.full_name }}
-          ref: ${{ github.event.pull_request.head.ref }}
-
-      - name: Set up JDK 8
+      - uses: actions/checkout@v3
+      - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
-          java-version: "8"
-          distribution: "zulu"
-      - name: Run unit tests
-        working-directory: .
-        run: |
-          mvn test
-
-      - name: Calculate mutation score
-        working-directory: .
-        run: |
-          # fail the build if mutation score is less than 80%
-          mvn test-compile org.pitest:pitest-maven:mutationCoverage -DmutationThreshold=80
-
-      - name: Log coverage percentage
-        run: |
-          echo "coverage = ${{ steps.jacoco.outputs.coverage }}"
-          echo "branch coverage = ${{ steps.jacoco.outputs.branches }}"
-
-      - name: Commit and push the badge (if it changed)
-        uses: EndBug/add-and-commit@v9
-        with:
-          default_author: github_actions
-          message: "Update coverage badge"
-          add: "*.svg"
+          java-version: "17"
+          distribution: "temurin"
+          cache: maven
+      - name: Run Unit Tests
+        run: mvn clean test
