--- a/.github/workflows/check-pr.yml
+++ b/.github/workflows/check-pr.yml
@@ -18,5 +18,26 @@ jobs:
           java-version: "21"
           distribution: "zulu"
           check-latest: true
+
       - name: Run Unit Tests
         run: mvn clean test
+
+      - name: Calculate Mutation Score
+        run: mvn test-compile org.pitest:pitest-maven:mutationCoverage
+
+      - name: Generate JaCoCo Badge
+        id: jacoco
+        uses: cicirello/jacoco-badge-generator@v2
+        with:
+          generate-branches-badge: true
+
+      - name: Log coverage percentage
+        run: |
+          echo "coverage = ${{ steps.jacoco.outputs.coverage }}"
+          echo "branch coverage = ${{ steps.jacoco.outputs.branches }}"
+
+      - name: Upload JaCoCo coverage report
+        uses: actions/upload-artifact@v2
+        with:
+          name: jacoco-report
+          path: target/site/jacoco/
